[coach and workout operations] added method to set role Coach available for Manager. Implemented WorkoutDto, CoachDto, related mappers and tests. Started working on implementation of method create new workout.